# league-of-legends

./: .gitignore  league-of-legends.cabal
src/: League.hs
src/League/: Actions.hs  Types.hs
src/League/Actions/: Champion.hs  Match.hs  StaticData.hs  Summoner.hs
src/League/Internal/TH/: FieldGen.hs  Shared.hs
src/League/Types/: Champion.hs  Constants.hs  Error.hs  League.hs  Match.hs  Region.hs  Summoner.hs  SummonerSpell.hs  Version.hs
test/League/Types/: ChampionSpec.hs  SummonerSpec.hs
test/data/: getAllChampions_example.json  getChampion_example.json  getSummonerByName_example.json
