name:                league-of-legends
version:             0.1.0.0
license:             BSD3
license-file:        LICENSE
author:              Fraser Murray
maintainer:          fraser.m.murray@gmail.com
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:
    League
    League.Actions
    League.Actions.Champion
    League.Actions.Match
    League.Actions.Summoner
    League.Types
    League.Types.Champion
    League.Types.Constants
    League.Types.Error
    League.Types.Match
    League.Types.Region
    League.Types.League
    League.Types.Summoner
    League.Types.Version
  build-depends:
    base == 4.7.*,
    aeson,
    attoparsec,
    api-builder,
    containers,
    either,
    lens,
    text,
    transformers
  hs-source-dirs: src
  default-language: Haskell2010
  ghc-options: -Wall
  default-extensions:
    GeneralizedNewtypeDeriving
    MultiParamTypeClasses
    FunctionalDependencies
    OverloadedStrings
    TemplateHaskell
